# Pandabox

./: .gitignore  CONTRIBUTING.md  Cargo.toml  DISTRIBUTION.md  FLATPAK_BUILD.md  README.md  build-flatpak.sh  build.rs  com.github.mastrHyperion98.Pandabox.desktop  com.github.mastrHyperion98.Pandabox.metainfo.xml  com.github.mastrHyperion98.Pandabox.yml  db.sqlite  diesel.toml  pandabox-wrapper.sh
distribute/: .gitignore  QUICK_START.md  README.md  SETUP.md  build-installer.ps1  collect-dependencies.ps1  pandabox.wxs  test-installer.ps1
distribute/assets/: license.rtf
migrations/2025-09-16-041110-0000_create_records/: down.sql  up.sql
migrations/2025-09-16-041329-0000_create_master_table/: down.sql  up.sql
src/: main.rs
src/database/: manager.rs  models.rs  schema.rs
src/encrypt/: cryptography.rs
src/handler/: handler.rs
src/session/: session.rs
ui/: app-window.slint  auth-view.slint  authenticate-window.slint  createdb-window.slint  custom-table-view.slint  dialogs.slint  grid.slint  main.slint  service-form.slint  services-view-custom.slint  services-view.slint  ui.slint
