[package]
name = "Pandabox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.8.0"
dirs = "6.0.0"
rusqlite = { version = "0.35", features = ["bundled"] }
argon2 =  "0.5.3"
rand_core = { version = "0.6", features = ["std"] }
rand = { version = "0.9.1", features = ["os_rng"] }
base64 = "0.22.1"
chacha20poly1305 = "0.10.1"
zeroize = "1.7"
chrono = "0.4.41"
hex = "0.4.3"

[build-dependencies]
slint-build = "1.8.0"
