[package]
name = "Pandabox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.8.0"
diesel = { version = "2.2.0", features = ["sqlite"] }
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
dotenvy = "0.15.7"
argon2 =  "0.5.3"
rand_core = { version = "0.6", features = ["std"] }
rand = { version = "0.9.1", features = ["os_rng"] }
base64 = "0.22.1"
chacha20poly1305 = "0.10.1"
zeroize = "1.7"


[build-dependencies]
slint-build = "1.8.0"
