[package]
name = "Pandabox"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.8.0"
diesel = { version = "2.2.0", features = ["sqlite"] }
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
libsqlite3-sys = { version = "0.27.0", features = ["bundled"] }
dotenvy = "0.15.7"
argon2 =  "0.5.3"
rand_core = { version = "0.6", features = ["std"] }
rand = { version = "0.9.1", features = ["os_rng"] }
base64 = "0.22.1"
chacha20poly1305 = "0.10.1"
zeroize = "1.7"
arboard = { version = "3.4", default-features = true }
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
rfd = "0.15"


[build-dependencies]
slint-build = "1.8.0"
